# API-Template

./: Cargo.toml  Rocket.toml  run.nu  run.sh
src/: main.rs
src/config/: macro.rs  mod.rs
src/logger/: level.rs  macro.rs  mod.rs  session.rs
src/routes/: test.rs
